# codex-forksmith

./: .env  .env.env.bak  .gitattributes  .gitignore  .gitmodules  Cargo.toml  PREDATOR_IMPLEMENTATION_PLAN.md  README.md  README.md.bak  TODO.md  codex-forksmith.toml
crates/ast-driver/: Cargo.toml
crates/ast-driver/src/: lib.rs
crates/cocci-driver/: Cargo.toml
crates/cocci-driver/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/pkg/: Cargo.toml
crates/pkg/src/: lib.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs
crates/updater-cli/: Cargo.toml
crates/updater-cli/src/: main.rs
crates/wrapper/: Cargo.toml
crates/wrapper/src/: main.rs
patch-registry/: registry.json
patches/local/: tmux_exec.patch.disable
scripts/: backend-import-smoke.sh  cleanup_workspace.sh
src/: config.rs  dev.rs  forksmith_main.rs  fs_config.rs  git.rs  legacy_main.rs  legacy_patches.rs  process.rs  registry.rs  runner.rs
src/commands/: build.rs  mod.rs  run.rs  status.rs  sync.rs
src/engines/: mod.rs  patch.rs
