[workspace]
members = [
    ".",
    "crates/ast-driver",
    "crates/cocci-driver",
    "crates/core",
    "crates/pkg",
    "crates/registry",
    "crates/updater-cli",
    "crates/wrapper",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
camino = "1.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
fs-err = "2.11"
indicatif = "0.17"
notify = "6.1"
pathdiff = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
which = "4.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[package]
name = "codex-forksmith"
version = "0.6.0"
edition = "2021"
description = "Sovereign codex patcher/updater with registry-driven patchsets"
license = "MIT"
default-run = "codex-forksmith"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
time = { workspace = true }
walkdir = { workspace = true }
notify = { workspace = true }
pathdiff = { workspace = true }
which = { workspace = true }

[[bin]]
name = "codex-forksmith"
path = "src/forksmith_main.rs"

[[bin]]
name = "codex-forksmith-legacy"
path = "src/legacy_main.rs"
